--- a/blog.html
+++ b/blog.html
@@ -629,7 +629,7 @@
             </div>
             <div class="footer-cntn-box col-md-6 col-lg-3 text-white">
               <div class="footer-hdr user-link-hdr">User Link</div>
-              <ul class="footer-links">
+              <ul class="footer-links second-footer-links">
                 <li>
                   <a href="">About Us</a>
                 </li>
