--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link" href="./menu.html">
+                <a class="nav-link" href="#">
                   Menu <i class="fa-solid fa-caret-down"></i>
                 </a>
                 <ul class="sub-menu">
+                  <li><a class="menu-list" href="./menu.html">All</a></li>
                   <li><a class="menu-list" href="#">Indian</a></li>
                   <li><a class="menu-list" href="#">Chinese</a></li>
                   <li><a class="menu-list" href="#">Japanese</a></li>
@@ -1254,7 +1255,9 @@
             <div
               class="footer-bottom-cntn-box d-flex justify-content-between pt-4"
             >
-              <a href=""class="footer-bottom-para">©2024 ARR, All right reserved</a>
+              <a href="" class="footer-bottom-para"
+                >©2024 ARR, All right reserved</a
+              >
               <div class="footer-bottom-box d-flex">
                 <a class="policy me-4">Privacy Policy</a>
                 <a class="terms">Terms of Use</a>
