--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container custom-container">
           <div class="nav-logo">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="./about.html">
               <img src="./assets/nav-logo.png" alt="" />
             </a>
           </div>
@@ -83,10 +83,11 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link" href="./menu.html">
+                <a class="nav-link" href="#">
                   Menu <i class="fa-solid fa-caret-down"></i>
                 </a>
                 <ul class="sub-menu">
+                  <li><a class="menu-list" href="./menu.html">All</a></li>
                   <li><a class="menu-list" href="#">Indian</a></li>
                   <li><a class="menu-list" href="#">Chinese</a></li>
                   <li><a class="menu-list" href="#">Japanese</a></li>
@@ -203,7 +204,11 @@
             data-aos="fade-right"
             data-aos-duration="1500"
           >
-            <h1 class="title1">Home / <span>About Us</span></h1>
+            <!-- <h1 class="title1">Home / <span>About Us</span></h1> -->
+            <h1 class="title1">
+              <a href="./index.html" class="title1">Home / </a
+              ><span>About Us</span>
+            </h1>
             <p>
               Lorem ipsum dolor sit amet consectetur. Dolor elit vitae nunc
               varius. Facilisis eget cras sit semper sit enim. Turpis aliquet at
@@ -586,13 +591,13 @@
       </section>
     </main>
     <!-- footer section -->
-    <section class="footer-sec" data-aos="fade-right" data-aos-duration="1800">
+    <footer class="footer-sec" data-aos="fade-right" data-aos-duration="1800">
       <div class="container">
         <div class="footer-top">
           <div class="row">
             <div class="footer-cntn-box col-lg-3 col-md-6">
               <div class="footer-logo">
-                <a href="/index.html">
+                <a href="/about.html">
                   <img src="./assets/footer-logo.png" alt="" />
                 </a>
               </div>
@@ -700,7 +705,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </footer>
     <!-- aos cdn js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- swipper js -->
