--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container custom-container">
           <div class="nav-logo">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="./contact.html">
               <img src="./assets/nav-logo.png" alt="" />
             </a>
           </div>
@@ -88,10 +88,11 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link" href="./menu.html">
+                <a class="nav-link" href="#">
                   Menu <i class="fa-solid fa-caret-down"></i>
                 </a>
                 <ul class="sub-menu">
+                  <li><a class="menu-list" href="./menu.html">All</a></li>
                   <li><a class="menu-list" href="#">Indian</a></li>
                   <li><a class="menu-list" href="#">Chinese</a></li>
                   <li><a class="menu-list" href="#">Japanese</a></li>
@@ -209,7 +210,11 @@
       >
         <div class="container">
           <div class="banner-wrpr">
-            <h1 class="title1">Home / <span> Contact Us</span></h1>
+            <!-- <h1 class="title1">Home / <span> Contact Us</span></h1> -->
+            <h1 class="title1">
+              <a href="./index.html" class="title1">Home /</a>
+              <span> Contact Us</span>
+            </h1>
             <p>
               Lorem ipsum dolor sit amet consectetur. Dolor elit vitae nunc
               varius. Facilisis eget cras sit semper sit enim. Turpis aliquet at
@@ -315,7 +320,7 @@
           <div class="row">
             <div class="footer-cntn-box col-lg-3 col-md-6">
               <div class="footer-logo">
-                <a href="./index.html">
+                <a href="./contact.html">
                   <img src="./assets/footer-logo.png" alt="" />
                 </a>
               </div>
@@ -413,7 +418,9 @@
           <div
             class="footer-bottom-cntn-box d-flex justify-content-between pt-4"
           >
-              <a href=""class="footer-bottom-para">©2024 ARR, All right reserved</a>
+            <a href="" class="footer-bottom-para"
+              >©2024 ARR, All right reserved</a
+            >
             <div class="footer-bottom-box d-flex">
               <div class="policy me-4">Privacy Policy</div>
               <div class="terms">Terms of Use</div>
