--- a/about.html
+++ b/about.html
@@ -591,7 +591,7 @@
       </section>
     </main>
     <!-- footer section -->
-    <footer class="footer-sec" data-aos="fade-right" data-aos-duration="1800">
+    <footer class="footer-sec">
       <div class="container">
         <div class="footer-top">
           <div class="row">
