--- a/contact.html
+++ b/contact.html
@@ -314,7 +314,7 @@
     </main>
 
     <!-- footer section -->
-    <footer class="footer-sec" data-aos="fade-right" data-aos-duration="1800">
+    <footer class="footer-sec">
       <div class="container">
         <div class="footer-top">
           <div class="row">
