--- a/index.html
+++ b/index.html
@@ -1147,11 +1147,7 @@
         </div>
       </section>
       <!-- footer section -->
-      <footer
-        class="footer-sec"
-        data-aos="fade-up-right"
-        data-aos-duration="1500"
-      >
+      <footer class="footer-sec">
         <div class="container">
           <div class="footer-top">
             <div class="row">
