--- a/index.html
+++ b/index.html
@@ -1094,8 +1094,12 @@
                 Simple Way To Order Your Foods
               </div>
               <div class="app-icon d-flex">
-                <img src="./assets/Frame 139.png" alt="" />
-                <img src="./assets/Frame 140.png" alt="" />
+                <a href="">
+                  <img src="./assets/Frame 139.png" alt="" />
+                </a>
+                <a href="">
+                  <img src="./assets/Frame 140.png" alt="" />
+                </a>
               </div>
             </div>
             <div
