--- a/about.html
+++ b/about.html
@@ -453,10 +453,37 @@
               data-aos="zoom-in"
               data-aos-duration="1500"
             >
-              <img src="./about-assets/Rectangle 727.png" alt="" />
+              <!-- <img src="./about-assets/Rectangle 727.png" alt="" />
               <img src="./about-assets/Rectangle 728.png" alt="" />
               <img src="./about-assets/Rectangle 729.png" alt="" />
-              <img src="./about-assets/Rectangle 730.png" alt="" />
+              <img src="./about-assets/Rectangle 730.png" alt="" /> -->
+              <div class="row">
+                <div class="col-6">
+                  <img
+                    src="./about-assets/Rectangle 727.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <img
+                    src="./about-assets/Rectangle 729.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <div class="col-6">
+                  <img
+                    src="./about-assets/Rectangle 728.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+
+                  <img
+                    src="./about-assets/Rectangle 730.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+              </div>
             </div>
             <div
               class="freq-ask-ques col-lg-6"
