--- a/chef.html
+++ b/chef.html
@@ -53,6 +53,55 @@
         </div>
       </div>
     </div>
+    <div id="bodyOverlay" class="body-overlay"></div>
+    <div id="loginModal" class="modal-overlay">
+      <div class="modal-content">
+        <button class="close-btn" id="closeModalBtn">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+
+        <div class="modal-body">
+          <div class="left">
+            <img src="./log_in/Rectangle 736.png" alt="Cafe" />
+          </div>
+
+          <div class="right">
+            <h2>Login</h2>
+            <form>
+              <label for="name">Your Name:</label>
+              <input type="text" id="name" placeholder="Enter your name" />
+
+              <label for="email">Email:</label>
+              <input type="email" id="email" placeholder="Enter your email" />
+
+              <label for="pass">Password:</label>
+              <input
+                type="password"
+                id="pass"
+                placeholder="Enter your password"
+              />
+
+              <div class="submit-sec d-flex">
+                <a href="#" class="forgot">Forgot Password?</a>
+
+                <button type="submit" class="submit-btn">Submit</button>
+              </div>
+            </form>
+
+            <div class="social">
+              <div class="facebook d-flex">
+                Facebook
+                <img src="./log_in/facebook-brands-solid-full 1.png" alt="" />
+              </div>
+              <div class="facebook">
+                Google
+                <img src="./log_in/google-symbol 1.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- header section -->
     <header class="hdr-sec">
       <nav class="navbar navbar-expand-lg">
@@ -130,7 +179,7 @@
               </button>
 
               <!-- Modal -->
-              <div id="loginModal" class="modal-overlay">
+              <!-- <div id="loginModal" class="modal-overlay">
                 <div class="modal-content">
                   <button class="close-btn" id="closeModalBtn">
                     <i class="fa-solid fa-xmark"></i>
@@ -190,7 +239,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
