--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,6 @@
       </div>
     </div>
 
-    
     <div id="bodyOverlay" class="body-overlay"></div>
 
     <div id="loginModal" class="modal-overlay">
@@ -286,9 +285,9 @@
               ac eu donec ut. Sagittis vestibulum at quis non massa netus.
             </p>
           </div>
-          <!-- first row -->
-          <div class="chef-swiper swiper">
+          <div class="swiper chef-swiper">
             <div class="swiper-wrapper">
+              <!-- CARD 1 -->
               <div class="swiper-slide">
                 <div
                   class="card bg-black chef-card"
@@ -330,6 +329,8 @@
                   </div>
                 </div>
               </div>
+
+              <!-- CARD 2 -->
               <div class="swiper-slide">
                 <div
                   class="card bg-black chef-card"
@@ -371,6 +372,7 @@
                   </div>
                 </div>
               </div>
+              <!-- CARD 3 -->
               <div class="swiper-slide">
                 <div
                   class="card bg-black chef-card"
@@ -412,6 +414,8 @@
                   </div>
                 </div>
               </div>
+
+              <!-- CARD 4 -->
               <div class="swiper-slide">
                 <div
                   class="card bg-black chef-card"
@@ -453,14 +457,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
-          </div>
-          <!-- --------second row---------- -->
-          <div class="chef-swiper swiper">
-            <div class="swiper-wrapper">
+
+              <!-- CARD 5 -->
               <div class="swiper-slide">
                 <div
                   class="card bg-black chef-card"
@@ -502,6 +500,8 @@
                   </div>
                 </div>
               </div>
+
+              <!-- CARD 6 -->
               <div class="swiper-slide">
                 <div
                   class="card bg-black chef-card"
@@ -543,6 +543,8 @@
                   </div>
                 </div>
               </div>
+
+              <!-- CARD 7 -->
               <div class="swiper-slide">
                 <div
                   class="card bg-black chef-card"
@@ -584,6 +586,8 @@
                   </div>
                 </div>
               </div>
+
+              <!-- CARD 8 -->
               <div class="swiper-slide">
                 <div
                   class="card bg-black chef-card"
@@ -626,8 +630,7 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+
             <div class="swiper-pagination"></div>
           </div>
         </div>
