--- a/about.html
+++ b/about.html
@@ -500,7 +500,7 @@
               netus.
             </p>
           </div>
-          <div class="row freq-row">
+          <div class="row freq-row g-4">
             <div
               class="freq-img-box col-lg-6"
               data-aos="zoom-in"
